# rayo-browser

./: .gitignore  .rayo-rules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODOS.md  release-please-config.json
.claude/hooks/: rayo-error-report.sh
.github/workflows/: ci.yml  release-please.yml  release.yml
.rayo/tests/: example-basic.test.yaml  example-login.test.yaml  example-visual.test.yaml
bench/: Cargo.toml
bench/benches/: cdp_latency.rs  page_map.rs  profiler.rs  rules.rs  selector_cache.rs
bench/competitors/: package-lock.json  package.json
bench/competitors/src/: run-benchmarks.ts
bench/results/: BENCHMARKS.md  latest.json
bench/src/: harness.rs  lib.rs
changes/flow-graph-crawler/: proposal.md
changes/flow-graph-crawler/specs/flow-crawler/: spec.md
conductors/: install.sh
conductors/architect/: auditor-prompt.md  collect-metrics.mjs  collect.sh  conductor-claude.md  launch.sh  prescriber-prompt.md  schema.sql  surveyor-prompt.md
conductors/feature/: breaker-prompt.md  conductor-claude.md  fixer-prompt.md  implementer-prompt.md  launch.sh  spec-writer-prompt.md  tester-prompt.md  ui-tester-prompt.md
conductors/fix/: breaker-prompt.md  challenger-prompt.md  conductor-claude.md  diagnose-prompt.md  e2e-prompt.md  fixer-prompt.md  green-prompt.md  launch.sh  red-prompt.md  test-style-guide.md
conductors/guardian/: bug-hunter-prompt.md  cleaner-prompt.md  conductor-claude.md  fixer-prompt.md  launch.sh  mark-complete.sh  scanner-prompt.md
crates/rayo-core/: Cargo.toml
crates/rayo-core/src/: actions.rs  auth.rs  batch.rs  browser.rs  cookie.rs  cookie_import.rs  detect.rs  error.rs  inspect.rs  lib.rs  network.rs  page_map.rs  persist.rs  selector_cache.rs  tab_manager.rs  wait.rs
crates/rayo-core/tests/: integration_test.rs
crates/rayo-mcp/: Cargo.toml
crates/rayo-mcp/src/: error_collector.rs  lib.rs  main.rs  server.rs  ui_main.rs
crates/rayo-mcp/src/tools/: batch.rs  cookie.rs  interact.rs  mod.rs  navigate.rs  network.rs  observe.rs  profile.rs
crates/rayo-mcp/tests/: mcp_integration_test.rs
crates/rayo-profiler/: Cargo.toml
crates/rayo-profiler/src/: collector.rs  export.rs  lib.rs  stats.rs
crates/rayo-rules/: Cargo.toml
crates/rayo-rules/src/: config.rs  defaults.rs  engine.rs  lib.rs  suggestions.rs
crates/rayo-test/: Cargo.toml
crates/rayo-test/src/: error.rs  lib.rs  loader.rs  main.rs  result.rs  server.rs  types.rs
crates/rayo-ui/: Cargo.toml  build.rs
crates/rayo-ui/fallback-ui/: index.html
crates/rayo-ui/src/: badge.rs  lib.rs  loader.rs  main.rs  narrative.rs  persistence.rs  report.rs  rundiff.rs  runner.rs  scan.rs  server.rs  story_runner.rs  story_types.rs  templates.rs  terminal.rs  types.rs
crates/rayo-ui/src/crawl/: classifier.rs  generate.rs  graph.rs  merge.rs  mod.rs  persona.rs
crates/rayo-ui/src/discover/: diff.rs  flows.rs  generator.rs  mod.rs  report.rs  stories.rs
crates/rayo-ui/src/discover/analyzers/: django.rs  express.rs  fastapi.rs  generic.rs  mod.rs  nextjs.rs  rails.rs  shared.rs  static_html.rs
crates/rayo-ui/templates/: base.html
crates/rayo-ui/templates/fragments/: available_suites.html  error.html  flow_sidebar.html  live_event.html  live_progress.html  stats.html  step_list.html  suite_card.html  suite_list.html
crates/rayo-ui/templates/pages/: dashboard.html  flows.html  live.html  suite_detail.html  suites.html  welcome.html
crates/rayo-ui/tests/: base_url_test.rs  diff_test.rs  discover_mod_test.rs  discover_test.rs  runner_features_test.rs  templates_test.rs  types_test.rs
crates/rayo-updater/: Cargo.toml
crates/rayo-updater/src/: config.rs  lib.rs  state.rs
crates/rayo-updater/tests/: updater_test.rs
crates/rayo-visual/: Cargo.toml
crates/rayo-visual/benches/: diff_bench.rs
crates/rayo-visual/src/: baseline.rs  cluster.rs  error.rs  lib.rs  mask.rs  overlay.rs  perceptual.rs  pixel.rs
docs/changes/chrome-process-safety/: proposal.md  tasks.md
docs/changes/rules-enforcement/: proposal.md  tasks.md
docs/changes/test-coverage-expansion/: proposal.md  tasks.md
docs/openspec/changes/auto-update/: design.md  proposal.md  tasks.md
docs/openspec/changes/batch-pipelining/: design.md  proposal.md  tasks.md
docs/openspec/changes/cache-coherence/: design.md  proposal.md  tasks.md
docs/openspec/changes/cdp-real-input/: design.md  proposal.md  tasks.md
docs/openspec/changes/chrome-launch-perf/: design.md  proposal.md  tasks.md
docs/openspec/changes/chrome-process-safety/: proposal.md  tasks.md
docs/openspec/changes/cleanup-dead-code/: design.md  proposal.md  tasks.md
docs/openspec/changes/content-aware-waits/: proposal.md  tasks.md
docs/openspec/changes/cookie-management/: proposal.md
docs/openspec/changes/event-driven-waits/: design.md  proposal.md  tasks.md
docs/openspec/changes/fix-profile-format/: design.md  proposal.md  tasks.md
docs/openspec/changes/fix-wait-and-clear/: design.md  proposal.md  tasks.md
docs/openspec/changes/mcp-server-e2e/: proposal.md
docs/openspec/changes/observation-layer-fix/: design.md  proposal.md  tasks.md
docs/openspec/changes/rayo-test/: tasks.md  (+1 more)
openspec/changes/auth-detection-v2/: proposal.md
openspec/changes/cookie-pipeline-v2/: proposal.md
openspec/changes/flow-graph-crawler/: proposal.md
openspec/changes/mcp-sampling-auth/: proposal.md
skills/architect/: SKILL.md
skills/cstatus/: SKILL.md
skills/feature/: SKILL.md
skills/fix/: SKILL.md
skills/guardian/: SKILL.md
skills/modular-delivery/: SKILL.md
skills/modular-delivery/references/: openspec-workflow.md  parallelism.md  principles.md  review-checklist.md
skills/plan-ceo/: SKILL.md
tests/fixtures/: dynamic.html  form.html  index.html  inspect-test.html  many_elements.html  multi-page.html  visual-test.html
tests/fixtures/discover-test/: about.html  contact.html  index.html
ui/: package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: dashboard-stats.tsx  live-runner.tsx  status-badge.tsx  step-card.tsx  suite-card.tsx
ui/src/lib/: api.ts
(+62 files in other folders)
