[workspace]
resolver = "2"
members = [
    "crates/rayo-core",
    "crates/rayo-profiler",
    "crates/rayo-rules",
    "crates/rayo-mcp",
    "bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/manurueda/rayo-browser"
description = "The fastest MCP browser automation tool"

[workspace.dependencies]
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lru = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
