[package]
name = "rayo-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmark suite for rayo-browser"

[dependencies]
rayo-core = { path = "../crates/rayo-core" }
rayo-profiler = { path = "../crates/rayo-profiler" }
rayo-rules = { path = "../crates/rayo-rules" }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "selector_cache"
harness = false

[[bench]]
name = "page_map"
harness = false

[[bench]]
name = "profiler"
harness = false

[[bench]]
name = "rules"
harness = false
