[package]
name = "rayo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core AI-native browser automation layer for rayo-browser"

[dependencies]
chromiumoxide = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lru = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
rayo-profiler = { version = "0.1.0", path = "../rayo-profiler" }
base64 = "0.22"
tempfile = "3"

[dev-dependencies]
which = "6"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["full", "net"] }
