[package]
name = "rayo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core AI-native browser automation layer for rayo-browser"

[features]
default = []
cookie-import = ["dep:rusqlite", "dep:aes", "dep:pbkdf2", "dep:sha1", "dep:hmac"]

[dependencies]
chromiumoxide = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lru = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
rayo-profiler = { version = "0.2.0", path = "../rayo-profiler" }
base64 = "0.22"
tempfile = "3"

# cookie-import feature deps
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
aes = { version = "0.8", optional = true }
pbkdf2 = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }

[dev-dependencies]
which = "6"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["full", "net"] }
