[package]
name = "rayo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The fastest MCP browser automation server"

[[bin]]
name = "rayo-mcp"
path = "src/main.rs"

[dependencies]
rayo-core = { path = "../rayo-core" }
rayo-profiler = { path = "../rayo-profiler" }
rayo-rules = { path = "../rayo-rules" }
chromiumoxide = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
rmcp = { version = "0.1", features = ["server", "transport-io"] }
