[package]
name = "rayo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The fastest MCP browser automation server"

[lib]
name = "rayo_mcp"
path = "src/lib.rs"

[[bin]]
name = "rayo-mcp"
path = "src/main.rs"

[dependencies]
rayo-core = { version = "0.1.0", path = "../rayo-core", features = ["cookie-import"] }
rayo-profiler = { version = "0.1.0", path = "../rayo-profiler" }
rayo-rules = { version = "0.1.0", path = "../rayo-rules" }
rayo-updater = { version = "0.1.0", path = "../rayo-updater" }
rayo-visual = { version = "0.1.0", path = "../rayo-visual" }
image = { version = "0.25", default-features = false, features = ["png"] }
chromiumoxide = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
rmcp = { version = "0.1", features = ["server", "transport-io"] }

[dev-dependencies]
which = "6"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
