[package]
name = "rayo-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI agent speed rules engine for rayo-browser"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayo-profiler = { version = "0.2.0", path = "../rayo-profiler" }
